# simulator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
app/: main.py
app/core/: settings.py
app/models/: __init__.py  base.py  car_model.py
app/repositories/: __init__.py  car_repository.py
app/routes/api/: __init__.py  simulation.py
app/schemas/: __init__.py  simulator.py  simulator_schema.py
app/services/: __init__.py  simulator.py
migrations/: env.py
migrations/versions/: 639a51530242_create_table_cars.py  96845910e873_create_table_cars.py
tests/: simulation_test.py
